duvet/src/citation/snapshots/duvet__citation__rangemap__tests__contiguous.snap
---
source: duvet/src/citation/rangemap.rs
assertion_line: 231
expression: "map([(0..4, 0), (4..10, 0)])"

---
[
    (
        0..10,
        [
            0,
        ],
    ),
]
