duvet/src/citation/snapshots/duvet__citation__rangemap__tests__contiguous_reverse.snap
---
source: duvet/src/citation/rangemap.rs
assertion_line: 232
expression: "map([(4..10, 0), (0..4, 0)])"

---
[
    (
        0..10,
        [
            0,
        ],
    ),
]
