duvet/src/citation/snapshots/duvet__citation__rangemap__tests__multiple.snap
---
source: duvet/src/citation/rangemap.rs
assertion_line: 235
expression: "map([(0..10, 0), (4..5, 1)])"

---
[
    (
        0..4,
        [
            0,
        ],
    ),
    (
        4..5,
        [
            0,
            1,
        ],
    ),
    (
        5..10,
        [
            0,
        ],
    ),
]
