duvet/src/citation/snapshots/duvet__citation__rangemap__tests__multiple_reverse.snap
---
source: duvet/src/citation/rangemap.rs
assertion_line: 236
expression: "map([(4..5, 1), (0..10, 0)])"

---
[
    (
        0..4,
        [
            0,
        ],
    ),
    (
        4..5,
        [
            0,
            1,
        ],
    ),
    (
        5..10,
        [
            0,
        ],
    ),
]
