duvet/src/citation/snapshots/duvet__citation__rangemap__tests__nested.snap
---
source: duvet/src/citation/rangemap.rs
assertion_line: 230
expression: "map([(0..10, 0), (4..5, 0)])"

---
[
    (
        0..10,
        [
            0,
        ],
    ),
]
