duvet/src/citation/snapshots/duvet__citation__rangemap__tests__non_contiguous.snap
---
source: duvet/src/citation/rangemap.rs
assertion_line: 233
expression: "map([(0..4, 0), (6..10, 0)])"

---
[
    (
        0..4,
        [
            0,
        ],
    ),
    (
        6..10,
        [
            0,
        ],
    ),
]
