duvet/src/citation/snapshots/duvet__citation__rangemap__tests__overlap.snap
---
source: duvet/src/citation/rangemap.rs
assertion_line: 234
expression: "map([(0..6, 0), (4..10, 0)])"

---
[
    (
        0..10,
        [
            0,
        ],
    ),
]
