duvet/src/citation/snapshots/duvet__citation__rangemap__tests__single.snap
---
source: duvet/src/citation/rangemap.rs
assertion_line: 229
expression: "map([(0..4, 0)])"

---
[
    (
        0..4,
        [
            0,
        ],
    ),
]
